--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly --nolazy --inspect-brk=5858 ./src/server.ts",
+    "dev-deb": "ts-node-dev --respawn --transpileOnly --nolazy --inspect-brk=5858 ./src/server.ts",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "npm-run-all build start",
-    "start": "nodemon --nolazy --inspect-brk=5858 ./dist/server.js",
+    "prod-deb": "npm-run-all start-deb",
+    "start": "nodemon --nolazy ./dist/server.js",
+    "start-deb": "nodemon --nolazy --inspect-brk=5858 ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
