--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "dist/server.js",
   "dependencies": {
+    "@types/mongoose": "^5.5.28",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.7"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
