--- a/ViBE-web-application/package.json
+++ b/ViBE-web-application/package.json
@@ -33,6 +33,7 @@
     "@angular/cli": "~8.3.17",
     "@angular/compiler-cli": "~8.2.13",
     "@angular/language-service": "~8.2.13",
+    "@types/googlemaps": "^3.38.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
