--- a/ViBE-web-application/package.json
+++ b/ViBE-web-application/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@auth0/angular-jwt": "^3.0.1",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.9.0",
