--- a/ViBE-web-application/package.json
+++ b/ViBE-web-application/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.9.0",
     "moment": "^2.24.0",
+    "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
